[package]
name = "tetris"
version = "0.1.0"
authors = ["yu-hasebe <yuhasebe0821@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.63"
derive-new = "0.5.9"
retrospector = { git = "https://github.com/yu-hasebe/retrospector.git", branch = "main" }
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.44"
features = [
  'console',
]
